package com.smartfitness.mlops.service;

import com.smartfitness.mlops.adapter.*;
import com.smartfitness.mlops.repository.*;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;
import org.springframework.stereotype.Component;

import java.util.UUID;

/**
 * MLOps Service - Business Layer Components
 * Reference: 11_MLOpsServiceComponent.puml
 * 
 * This file contains all Business Layer interfaces and implementations
 * for the MLOps Service to meet the 100% diagram consistency requirement.
 */

// ========== INTERFACES ==========

interface ITrainingTriggerService {
    String triggerTraining(String modelType);
}

interface IModelDeploymentService {
    String deployModel(String modelId);
}

interface ITrainingPipelineService {
    void orchestrateTraining(String trainingId);
}

interface IModelVerificationService {
    boolean verifyModel(String modelId);
}

interface IDataManagementService {
    void collectTrainingData();
    void persistTrainingData(String data);
}

interface ITrainingEventHandler {
    void handleTrainingEvent(String event);
}

interface IDeploymentEventHandler {
    void handleDeploymentEvent(String event);
}

// ========== IMPLEMENTATIONS ==========

@Slf4j
@Service
@RequiredArgsConstructor
class TrainingManager implements ITrainingTriggerService, ITrainingEventHandler {
    
    private final ITrainingPipelineService trainingPipelineService;
    private final IMessageSubscriptionService messageSubscriptionService;
    
    @Override
    public String triggerTraining(String modelType) {
        log.info("Triggering training for model type: {}", modelType);
        String trainingId = UUID.randomUUID().toString();
        trainingPipelineService.orchestrateTraining(trainingId);
        return trainingId;
    }
    
    @Override
    public void handleTrainingEvent(String event) {
        log.info("Handling training event: {}", event);
    }
}

@Slf4j
@Service
@RequiredArgsConstructor
class DeploymentService implements IModelDeploymentService, IDeploymentEventHandler {
    
    private final IModelDataRepository modelDataRepository;
    private final IMLInferenceEngine mlInferenceEngine;
    private final IFaceModelClient faceModelClient;
    private final IMessagePublisherService messagePublisherService;
    
    @Override
    public String deployModel(String modelId) {
        log.info("Deploying model: {}", modelId);
        
        // 1. Deploy to ML Inference Engine
        mlInferenceEngine.deployModel(modelId);
        
        // 2. Notify FaceModel Service (Hot Swap)
        faceModelClient.notifyModelUpdate(modelId);
        
        // 3. Publish deployment event
        // messagePublisherService.publishEvent(new ModelDeployedEvent(modelId));
        
        return UUID.randomUUID().toString();
    }
    
    @Override
    public void handleDeploymentEvent(String event) {
        log.info("Handling deployment event: {}", event);
    }
}

@Slf4j
@Service
@RequiredArgsConstructor
class TrainingPipelineOrchestrator implements ITrainingPipelineService {
    
    private final IModelVerificationService modelVerificationService;
    private final IDataManagementService dataManagementService;
    private final IModelDeploymentService modelDeploymentService;
    private final IMessagePublisherService messagePublisherService;
    
    @Override
    public void orchestrateTraining(String trainingId) {
        log.info("Orchestrating training pipeline: {}", trainingId);
        
        // 1. Collect and prepare training data
        dataManagementService.collectTrainingData();
        
        // 2. Train model (stub: actual training)
        String modelId = "model-" + trainingId;
        
        // 3. Verify model
        boolean isVerified = modelVerificationService.verifyModel(modelId);
        
        // 4. If verified, deploy model
        if (isVerified) {
            modelDeploymentService.deployModel(modelId);
        }
        
        // 5. Publish training completed event
        // messagePublisherService.publishEvent(new TrainingCompletedEvent(trainingId));
    }
}

@Slf4j
@Service
@RequiredArgsConstructor
class ModelVerificationService implements IModelVerificationService {
    
    private final AccuracyVerifier accuracyVerifier;
    private final PerformanceVerifier performanceVerifier;
    private final IMessagePublisherService messagePublisherService;
    
    @Override
    public boolean verifyModel(String modelId) {
        log.info("Verifying model: {}", modelId);
        
        // 1. Verify accuracy
        boolean accuracyPass = accuracyVerifier.verifyAccuracy(modelId);
        
        // 2. Verify performance
        boolean performancePass = performanceVerifier.verifyPerformance(modelId);
        
        boolean verified = accuracyPass && performancePass;
        log.info("Model verification result: {} (accuracy={}, performance={})", 
                verified, accuracyPass, performancePass);
        
        return verified;
    }
}

@Slf4j
@Service
@RequiredArgsConstructor
class DataManagementService implements IDataManagementService {
    
    private final DataCollector dataCollector;
    private final DataPersistenceManager dataPersistenceManager;
    private final IModelDataRepository modelDataRepository;
    private final ITrainingDataRepository trainingDataRepository;
    
    @Override
    public void collectTrainingData() {
        log.info("Collecting training data");
        dataCollector.collectFromAuthService();
        dataCollector.collectFromHelperService();
    }
    
    @Override
    public void persistTrainingData(String data) {
        log.info("Persisting training data");
        dataPersistenceManager.persist(data);
    }
}

// ========== MEDIATOR COMPONENTS ==========

@Slf4j
@Component
@RequiredArgsConstructor
class DataCollector {
    
    private final IAuthRepository authRepository;
    private final IHelperRepository helperRepository;
    
    public void collectFromAuthService() {
        log.info("Collecting training data from Auth Service (READ-ONLY)");
        // DD-03 Exception: READ-ONLY access to Auth DB
        // authRepository.findAllFaceVectors();
    }
    
    public void collectFromHelperService() {
        log.info("Collecting training data from Helper Service (READ-ONLY)");
        // DD-03 Exception: READ-ONLY access to Helper DB
        // helperRepository.findAllTaskPhotos();
    }
}

@Slf4j
@Component
class DataPersistenceManager {
    public void persist(String data) {
        log.info("Persisting data to training data store");
    }
}

@Slf4j
@Component
class AccuracyVerifier {
    public boolean verifyAccuracy(String modelId) {
        log.info("Verifying model accuracy: {}", modelId);
        return true; // Stub: Always pass
    }
}

@Slf4j
@Component
class PerformanceVerifier {
    public boolean verifyPerformance(String modelId) {
        log.info("Verifying model performance: {}", modelId);
        return true; // Stub: Always pass
    }
}

